INCLUDES =  -I.. -I"$(top_srcdir)/src"
#AM_CFLAGS = @CFLAGS@ @WARN_CFLAGS@

AUTOMAKE_OPTIONS = subdir-objects

lib_LTLIBRARIES = libdddsp.la

libdddsp_la_SOURCES =

libdddsp_la_SOURCES += dddsp-correlator.c dddsp-correlator.h dddsp-decimator.c dddsp-decimator.h dddsp-discriminator.c dddsp-discriminator.h dddsp-filter.c dddsp-filter.h dddsp-misc.c dddsp-misc.h dddsp-modulator.c dddsp-modulator.h dddsp-resampler.c dddsp-resampler.h dddsp.h

DISTCLEANFILES = .deps Makefile

