INCLUDES =  -I.. -I"$(top_srcdir)/src" -I"$(top_srcdir)/src/pt-1.4" -I"$(top_srcdir)/src/utils"

AUTOMAKE_OPTIONS = subdir-objects

lib_LTLIBRARIES = libdddsp.la

libdddsp_la_SOURCES =

libdddsp_la_SOURCES += dddsp-correlator.c dddsp-correlator.h dddsp-decimator.c dddsp-decimator.h dddsp-discriminator.c dddsp-discriminator.h dddsp-filter.c dddsp-filter.h dddsp-misc.c dddsp-misc.h dddsp-modulator.c dddsp-modulator.h dddsp-resampler.c dddsp-resampler.h dddsp.h g711.c g711.h

DISTCLEANFILES = .deps Makefile

