INCLUDES =  -I.. -I"$(top_srcdir)/src" -I"$(top_srcdir)/src/pt-1.4" -I"$(top_srcdir)/src/utils"

AUTOMAKE_OPTIONS = subdir-objects

lib_LTLIBRARIES = libddsstv.la

libddsstv_la_SOURCES = 

libddsstv_la_SOURCES += ddsstv-decoder.c ddsstv-decoder.h ddsstv-discriminator.c ddsstv-discriminator.h ddsstv-mode.c ddsstv-mode.h ddsstv.h

DISTCLEANFILES = .deps Makefile

EXTRA_DIST = DDSSTVDecoder.h DDSSTVDecoder.m DDSSTVDecoderViewController.h DDSSTVDecoderViewController.m DDSSTVDiscriminator.h DDSSTVDiscriminator.m DDSSTVEncoder.h DDSSTVEncoder.m

